add octpfish script

--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -56,7 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select a file from the list"
+    "Select a file from the list\n",
+    "\n",
+    "TODO: fix when there are only one image"
    ]
   },
   {
