--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -72,179 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import numpy.ma as ma\n",
-    "import dask.array as da\n",
-    "from skimage import measure\n",
-    "import pandas as pd\n",
-    "import json\n",
-    "from imaris_ims_file_reader.ims import ims\n",
-    "import tifffile\n",
-    "import napari\n",
-    "from scipy import ndimage as ndi\n",
-    "\n",
-    "\n",
-    "def get_files(dstdir, row, key=None):\n",
-    "    if key == \"ims\":\n",
-    "        return Path(row[\"folder\"]) / row[\"name\"]\n",
-    "    elif key == \"regions\":\n",
-    "        return Path(dstdir / str(row[\"name\"]).replace(\".ims\", \"-regions.json\"))\n",
-    "    elif key == \"labels\":\n",
-    "        return Path(dstdir / str(row[\"name\"]).replace(\".ims\", \"-labels.tif\"))\n",
-    "    elif key == \"measurements\":\n",
-    "        return Path(dstdir / str(row[\"name\"]).replace(\".ims\", \"-measurements.csv\"))\n",
-    "    else:\n",
-    "        return {\n",
-    "            \"ims\": get_files(dstdir, row, \"ims\"),\n",
-    "            \"regions\": get_files(dstdir, row, \"regions\"),\n",
-    "            \"labels\": get_files(dstdir, row, \"labels\"),\n",
-    "            \"measurements\": get_files(dstdir, row, \"measurements\"),\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "def load_regions_as_labels(dstdir: Path, row: pd.Series, shape, resolution_level: int):\n",
-    "    \"\"\"Load regions as labels\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    dstdir: pathlib.Path\n",
-    "    row : pandas.Series\n",
-    "    shape : List\n",
-    "    resolution_level: int\n",
-    "\n",
-    "    Result\n",
-    "    ------\n",
-    "    rois: numnpy.ndarray\n",
-    "        labels image\n",
-    "    \"\"\"\n",
-    "\n",
-    "    with open(get_files(dstdir, row, \"regions\"), \"r\") as outfile:\n",
-    "        poly = json.load(outfile)\n",
-    "\n",
-    "    c = pow(2, poly[\"resolution_level\"] - resolution_level)\n",
-    "    sdata = [c * np.array(p) for p in poly[\"regions\"]]\n",
-    "    rois2d = napari.layers.Shapes(sdata, shape_type=\"polygon\").to_labels(\n",
-    "        labels_shape=[shape[1], shape[2]]\n",
-    "    )\n",
-    "    rois = np.zeros(shape)\n",
-    "    for k in range(shape[0]):\n",
-    "        rois[k, 0 : rois2d.shape[0], 0 : rois2d.shape[1]] = rois2d\n",
-    "    return rois\n",
-    "\n",
-    "\n",
-    "def preprocess(img):\n",
-    "    \"\"\"Preprocess the image before FISH intensity measurement\n",
-    "\n",
-    "    Parameter\n",
-    "    ---------\n",
-    "    img : numpy.ndarray\n",
-    "        input image\n",
-    "    Result\n",
-    "    ------\n",
-    "    numpy.ndarray\n",
-    "        result\n",
-    "    \"\"\"\n",
-    "    img = img.astype(np.float32)\n",
-    "    # smooth tiles\n",
-    "    tmp = img.copy()\n",
-    "    tmp[tmp == 0] = np.mean(tmp[tmp > 0])\n",
-    "    for _ in range(7):\n",
-    "        tmp = ndi.gaussian_filter(tmp, [2, 2, 2])\n",
-    "        tmp[img > 0] = img[img > 0]\n",
-    "    # difference of Gaussians\n",
-    "    d = ndi.gaussian_filter(tmp, [0.5, 1, 1]) - ndi.gaussian_filter(tmp, [1, 2, 2])\n",
-    "    # relu with 4 std\n",
-    "    t = 1.48 * np.median(np.abs(d - np.median(d)))\n",
-    "    return np.maximum(0, d / t - 4)\n",
-    "\n",
-    "\n",
-    "def record_intensity(labels, score, rois, channel_str):\n",
-    "    \"\"\"\n",
-    "    Measure mean intensities in labels for each channels in score.\n",
-    "    \"\"\"\n",
-    "    z, y, x = np.meshgrid(*[np.arange(n) for n in labels.shape], indexing='ij')\n",
-    "    dst = []\n",
-    "    label_list = np.unique(labels)\n",
-    "    for idx in label_list[1:]:\n",
-    "        mask = labels != idx\n",
-    "        dst.append(\n",
-    "            {\n",
-    "                \"label\": idx,\n",
-    "                \"roi\": ma.MaskedArray(rois, mask).min(),\n",
-    "                \"x\": ma.MaskedArray(x, mask).mean(),\n",
-    "                \"y\": ma.MaskedArray(y, mask).mean(),\n",
-    "                \"z\": ma.MaskedArray(z, mask).mean(),\n",
-    "                \"area\": np.logical_not(mask).sum(),\n",
-    "                **{channel_str[k]: ma.MaskedArray(score[k], mask).mean() for k in range(score.shape[0])},                \n",
-    "            }\n",
-    "        )\n",
-    "    return pd.DataFrame.from_records(dst)\n",
-    "\n",
-    "\n",
-    "def process_item(row, resolution_level: int, model, dstdir: Path, crop:bool = False, dummy_run:bool=False):\n",
-    "    \"\"\"Process a line of the input filelist\n",
-    "\n",
-    "    Segment the nuclei and measure the FISH signal\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # identify the channel with nuclar label\n",
-    "    nuclear_channel = int(row[[str(x).lower() == 'nuclei' for x in row]].index.item().replace('channel','')) - 1\n",
-    "    \n",
-    "    # load the image\n",
-    "    store = ims(\n",
-    "        get_files(dstdir, row, \"ims\"), ResolutionLevelLock=resolution_level, aszarr=True\n",
-    "    )\n",
-    "    img = da.from_zarr(store)\n",
-    "    \n",
-    "    if crop:\n",
-    "        img = img[:,:,:,0:512,0:512]\n",
-    "\n",
-    "    nchannels = img.shape[1]\n",
-    "\n",
-    "    # channel indices\n",
-    "    channel_idx = [k for k in range(nchannels) if k != nuclear_channel]\n",
-    "\n",
-    "    # channel names\n",
-    "    channel_str = [row[f'channel{k+1}'] for k in channel_idx]\n",
-    "\n",
-    "    if dummy_run:\n",
-    "        print(channel_str)\n",
-    "        return None\n",
-    "    \n",
-    "    # segment the cell\n",
-    "    label_file = Path(get_files(dstdir, row, \"labels\"))    \n",
-    "    if label_file.exists():\n",
-    "        print(f'Reusing label {label_file}')\n",
-    "        labels = tifffile.imread(label_file)\n",
-    "    else:\n",
-    "        labels = model.eval(\n",
-    "            img[:, nuclear_channel].compute().squeeze(),\n",
-    "            diameter=30 / resolution_level,\n",
-    "            do_3D=False,\n",
-    "            anisotropy=3,\n",
-    "            min_size=500,\n",
-    "            stitch_threshold=0.1,\n",
-    "        )[0]\n",
-    "\n",
-    "        tifffile.imwrite(get_files(dstdir, row, \"labels\"), labels)\n",
-    "\n",
-    "    # load the regions\n",
-    "    rois = load_regions_as_labels(dstdir, row, labels.shape, resolution_level)\n",
-    "    \n",
-    "    # preprocess the channels    \n",
-    "    score = np.stack(\n",
-    "        [\n",
-    "            preprocess(img[0, k].compute().squeeze().astype(np.float32))\n",
-    "            for k in channel_idx\n",
-    "        ],\n",
-    "        0,\n",
-    "    )\n",
-    "\n",
-    "    df = record_intensity(labels, score, rois, channel_str)\n",
-    "\n",
-    "    df.to_csv(get_files(dstdir, row, \"measurements\"), index=False)\n",
-    "\n",
-    "    return df"
+    "import octofish"
    ]
   },
   {
@@ -268,9 +96,9 @@
     "dummy_run = False\n",
     "\n",
     "for row in filelist.iloc:\n",
-    "    if get_files(dstdir, row, \"measurements\").exists() is False:\n",
-    "        if get_files(dstdir, row, \"regions\").exists() is True:            \n",
-    "            process_item(row, resolution_level, model, dstdir, crop, dummy_run)"
+    "    if octofish.get_files(dstdir, row, \"measurements\").exists() is False:\n",
+    "        if octofish.get_files(dstdir, row, \"regions\").exists() is True:            \n",
+    "            octofish.process_item(row, resolution_level, model, dstdir, crop, dummy_run)"
    ]
   }
  ],
