--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -313,45 +313,33 @@
     "    ]\n",
     "    dask.compute(tsk)\n",
     "\n",
-    "    return dst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pset = [x for x in powerset(channels)]\n",
-    "pset[0]=('none',)\n",
-    "pset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reduce_channels(channels, channels_to_keep, codes_ex, decoder_ex):\n",
+    "    return dst\n",
+    "\n",
+    "def reduce_channels(codes_ex, decoder_ex, channels_to_keep):\n",
     "    \"\"\" Compute the mapping between two difference set of channels\n",
     "    \n",
     "    Parameters\n",
     "    ----------    \n",
-    "    channels: Iterable\n",
-    "        original list of channels\n",
+    "    codes_ex: pd.dataframe\n",
+    "        data frame with label and id\n",
+    "    decoder_ex: dict\n",
+    "        mappting between id and the channels combination\n",
     "    channels_to_keep : Iterable\n",
     "        list of channels to keep\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    a dictionnary mapping the orignal set to the new one\n",
-    "    \"\"\"\n",
-    "    pset = [x for x in powerset(channels)]        \n",
-    "    pset_keep = [x for x in powerset(channels_to_keep)]        \n",
+    "    codes_ex_keep: pd.Dataframe\n",
+    "        new data frame\n",
+    "    decoder_ex_keep: dict\n",
+    "        new decoder with reduces channels\n",
+    "    \"\"\"            \n",
+    "    pset_keep = [x for x in powerset(channels_to_keep)]    \n",
+    "    decoder_ex_keep = {k:x for k,x in enumerate(pset_keep)}\n",
+    "    decoder_ex_keep[0] = ('none',)    \n",
     "    # map channel combination set to the one to keep\n",
     "    channels_set_mapping = {}\n",
-    "    for x in pset:\n",
+    "    for _, x in decoder_ex.items():\n",
     "        z = []\n",
     "        for y in pset_keep:                \n",
     "            if (set(x) & set(y)) == set(y):\n",
@@ -362,17 +350,12 @@
     "            channels_set_mapping[x] = sorted(z,key=len)[-1]\n",
     "            if channels_set_mapping[x] == ():\n",
     "                channels_set_mapping[x] = ('none',)    \n",
-    "    # create new codes and decoders\n",
-    "    decoder_ex_keep = {k:x for k,x in enumerate(pset_keep)}\n",
-    "    decoder_ex_keep[0] = ('none',)\n",
+    "    # create new codes and decoders    \n",
     "    encoder_ex_keep = {decoder_ex_keep[k]:k for k in decoder_ex_keep}\n",
     "    mapper = {k:encoder_ex_keep[channels_set_mapping[decoder_ex[k]]] for k in decoder_ex}\n",
     "    codes_ex_keep = codes_ex.copy()\n",
     "    codes_ex_keep['id'] = codes_ex['id'].apply(lambda x:mapper[x])\n",
-    "    return codes_ex_keep, encoder_ex_keep\n",
-    "\n",
-    "codes_ex_keep, decoder_ex_keep = reduce_channels(channels, ('LGC009', 'vglut'), codes_ex, decoder_ex)\n",
-    "\n"
+    "    return codes_ex_keep, decoder_ex_keep"
    ]
   },
   {
@@ -464,6 +447,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Keep next steps in notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Visualize the map of intensity to select threshold"
    ]
   },
@@ -504,13 +494,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "channels_to_keep = ['LGC009','vglut']\n",
-    "codes_ex, decoder_ex = encode_channels_exclusive(df, channels_to_keep, thresholds)\n"
+    "Reduce the number of original channels:"
    ]
   },
   {
@@ -518,15 +505,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "decoder_ex"
+    "channels_to_keep = ('LGC009','vglut')\n",
+    "# codes_ex, decoder_ex = encode_channels_exclusive(df, channels_to_keep, thresholds)\n",
+    "codes_ex, decoder_ex = reduce_channels(codes_ex, decoder_ex, channels_to_keep)"
    ]
   },
   {
@@ -550,7 +532,7 @@
     "plt.axis(\"off\")\n",
     "fig.legend(\n",
     "    scatter.legend_elements()[0],\n",
-    "    [\"+\".join(decoder_ex[k]) for k in range(8)],\n",
+    "    [\"+\".join(decoder_ex[k]) for k in range(len(decoder_ex))],\n",
     "    loc=\"outside right\",\n",
     "    title=\"Catergories\",\n",
     ")"
