update the region loading/saving to not use napari direclty

--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a list of files to process"
+    "# Create a list of files to process\n",
+    "\n",
+    "We start by creating a list of files to process located in a source (data) folder. \n",
+    "\n",
+    "The list of files will be saved as csv file in the destination (project) folder. \n",
+    "\n",
+    "The current source and destination folder are stored in a config.yml file locally."
    ]
   },
   {
@@ -23,9 +29,14 @@
     "        config = yaml.safe_load(file)\n",
     "        if \"source\" in config.keys():\n",
     "            srcdir = Path(config[\"source\"])\n",
+    "            if not srcdir.exists():\n",
+    "                srcdir = \"\"\n",
     "        if \"destination\" in config.keys():\n",
     "            dstdir = Path(config[\"destination\"])\n",
-    "fc1 = FileChooser(srcdir.parent, select_desc=\"Source\")\n",
+    "            if not dstdir.exists():\n",
+    "                dstdir = \"\"\n",
+    "\n",
+    "fc1 = FileChooser(srcdir, select_desc=\"Source\")\n",
     "fc2 = FileChooser(dstdir, select_desc=\"Destination\")\n",
     "display(fc1)\n",
     "display(fc2)"
@@ -43,6 +54,7 @@
     "print(\"Source folder:\", srcdir)\n",
     "print(\"Destination folder :\", dstdir)\n",
     "print(\"Output file list :\", filelistname)\n",
+    "\n",
     "# update yaml config file\n",
     "try:\n",
     "    cnf = yaml.safe_load(\n",
