--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Section of region of interest\n",
     "\n",
-    "Load the file at a low resolution and add regions of interest."
+    "In this notebook, we create the regions of interest where nuclei will be segregated into later.\n",
+    "\n",
+    "We start to load the file at a low resolution and create regions layers in napari.\n"
    ]
   },
   {
@@ -15,6 +17,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import octofish\n",
     "import yaml\n",
     "from pathlib import Path\n",
     "from ipyfilechooser import FileChooser\n",
@@ -56,9 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select a file from the list\n",
-    "\n",
-    "TODO: fix when there are only one image"
+    "Select a file from the list if necessary."
    ]
   },
   {
@@ -68,12 +79,16 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "w = widgets.Dropdown(\n",
-    "    options=[(x,k) for k,x in enumerate(filelist['name'])],\n",
-    "    value=1,\n",
-    "    description='Image:',\n",
-    ")\n",
-    "display(w)"
+    "if len(filelist) == 1:\n",
+    "    print(\"Filelist has only one item.\")\n",
+    "    w = None\n",
+    "else:\n",
+    "    w = widgets.Dropdown(\n",
+    "        options=[(x,k) for k,x in enumerate(filelist['name'])],\n",
+    "        value=1,\n",
+    "        description='Image:',\n",
+    "    )\n",
+    "    display(w)"
    ]
   },
   {
@@ -89,26 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_files(dstdir, row, key=None):\n",
-    "    if key == 'ims':\n",
-    "        return Path(row['folder']) / row['name']\n",
-    "    elif key == 'regions':\n",
-    "        return Path(dstdir / str(row[\"name\"]).replace('.ims','-regions.json'))\n",
-    "    elif key == 'labels':\n",
-    "        return Path(dstdir / str(row['name']).replace('.ims','-labels.tif'))\n",
-    "    elif key == 'measurements':\n",
-    "        return Path(dstdir / str(row['name']).replace('.ims','-measurements.csv'))    \n",
-    "    else:\n",
-    "        return {\n",
-    "            'ims': get_files(dstdir, row, 'ims'),\n",
-    "            'regions': get_files(dstdir, row, 'regions'),\n",
-    "            'labels': get_files(dstdir, row, 'labels'),\n",
-    "            'measurements':  get_files(dstdir, row, 'measurements')\n",
-    "        }\n",
-    "    \n",
-    "row = filelist.iloc[w.value]\n",
-    "filename = get_files(dstdir, row, 'ims')\n",
-    "regionname = get_files(dstdir, row, 'regions')\n",
+    "row = filelist.iloc[w.value] if w is not None  else filelist.iloc[0]\n",
+    "filename = octofish.get_files(dstdir, row, 'ims')\n",
+    "regionname = octofish.get_files(dstdir, row, 'regions')\n",
     "print(\"Input IMS filename:\", filename)\n",
     "print(\"Destination:\", dstdir)\n",
     "print(\"Output region file:\", regionname)\n",
@@ -134,23 +132,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from imaris_ims_file_reader.ims import ims\n",
-    "import dask.array as da\n",
-    "\n",
     "resolution_level = 1\n",
-    "\n",
-    "store = ims(filename, ResolutionLevelLock=resolution_level, aszarr=True)\n",
-    "\n",
-    "img = da.from_zarr(store)\n",
-    "nuclei = da.max(img[0,3],0).compute().squeeze()\n",
-    "print(nuclei.shape)"
+    "nuclei = octofish.load_nuclei_channel_2d(dstdir, row, resolution_level)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the file in napari and add some regions. If there are existing regions, load the regions as shapes."
+    "Load the file in napari and add manually some regions. \n",
+    "\n",
+    "If there are existing regions, load the regions as shapes."
    ]
   },
   {
@@ -159,17 +151,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import numpy as np\n",
+    "\n",
     "import napari\n",
     "\n",
     "v = napari.view_image(nuclei)\n",
-    "if regionname.exists():\n",
-    "    with open(regionname, \"r\") as outfile:\n",
-    "        poly = json.load(outfile)\n",
-    "    c = pow(2, poly['resolution_level']- resolution_level)    \n",
-    "    sdata = [c * np.array(p) for p in poly['regions']]\n",
-    "    v.add_shapes(sdata,shape_type='polygon')\n"
+    "\n",
+    "rois = octofish.load_region_polygons(dstdir, row, resolution_level)\n",
+    "if rois is not None:\n",
+    "    v.add_shapes(rois, shape_type='polygon')\n"
    ]
   },
   {
@@ -185,15 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "poly = {\n",
-    "    'shape': nuclei.shape,\n",
-    "    'resolution_level': resolution_level,\n",
-    "    'regions': [ p.tolist() for p in v.layers[-1].data ] \n",
-    "}\n",
-    "\n",
-    "with open(regionname, \"w\") as outfile:\n",
-    "    json.dump(poly, outfile)"
+    "octofish.save_regions(dstdir, row, resolution_level, v.layers[-1].data )"
    ]
   },
   {
@@ -210,13 +191,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "with open(regionname, \"r\") as outfile:\n",
-    "    poly2 = json.load(outfile)\n",
-    "\n",
-    "rois = napari.layers.Shapes(poly2['regions'],shape_type='polygon').to_labels(labels_shape=poly2['shape'])\n",
+    "rois = octofish.load_regions_as_labels(dstdir, row, nuclei.shape, resolution_level)\n",
     "plt.imshow(nuclei)\n",
-    "plt.imshow(rois,alpha=0.5)\n",
+    "plt.imshow(rois, alpha=0.5)\n",
     "plt.axis('off');"
    ]
   }
