--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -63,22 +63,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define processing functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import octofish"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Process all files"
    ]
   },
@@ -88,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import octofish\n",
     "from cellpose import models, core\n",
     "\n",
     "model = models.Cellpose(gpu=core.use_gpu(), model_type=\"nuclei\")\n",
